# foocrate

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: Foobar2000Sdk.cmake
docs/: DEVELOPMENT_SETUP.md  INSTALLATION_AND_UPGRADE.md  PROJECT_RULES.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_1.0.4.md  RELEASE_NOTES_1.0.5.md
scripts/: deploy-component.ps1  package-component.ps1  prepare-release.ps1
specs/: 000-product-spec.md  001-ui-ux-goals.md  PRODUCT_SPEC.md
specs/modules/: ALBUM_COVER_BROWSER.md  COVERFLOW_WINDOW.md  DPI_ACCESSIBILITY_AND_KEYBOARD.md  ESLYRIC_RECOMMENDED_DEFAULTS.md  FOOBOX_BASIC_DEFAULT_VISUAL.md  LYRICS_AND_TRACK_DETAILS.md  MINI_PLAYER.md  NOW_PLAYING_HEADER.md  PLAYBACK_LOCATION_AND_RESTORE.md  PLAYBACK_SHELL.md  PLAYLIST_BROWSER.md  PLAYLIST_FILTER_AND_ALBUM_LIST.md  PLAYLIST_GROUPING_AND_COLUMNS.md  PLAYLIST_QUEUE_DRAG_AND_RATING.md  PLAYLIST_VIEW.md  SETTINGS_AND_MIGRATION.md  SETTINGS_INFORMATION_ARCHITECTURE.md  STABILITY_PERFORMANCE_AND_LIFECYCLE.md  THEME_AND_ACCENT_SYSTEM.md  TOP_BAR_AND_PLAYBACK_TOOLS.md
src/: album_browser_model.h  artwork_cache.cpp  artwork_cache.h  artwork_loader.cpp  artwork_loader.h  compact_track_list_model.h  component.cpp  component_identity.h  dependencies_preferences.cpp  foo_crate.rc  foo_refrain.rc  lyrics_host.cpp  lyrics_host.h  now_playing_preferences.cpp  now_playing_state.h  now_playing_toolbar.cpp  playback_layout.h  playback_location_model.h  playback_order_icon.h  playback_panel.cpp  playback_panel.h  playback_state.h  playlist_browser_model.h  playlist_browser_preferences.cpp  playlist_config_model.h  playlist_grouping_model.h  playlist_interaction_model.h  playlist_preferences.cpp  playlist_view_model.h  preferences.cpp  settings.cpp  settings.h  settings_model.h  theme_model.cpp  theme_model.h
tasks/: README.md  TODO.md
tasks/000-项目规则与产品规格/: README.md  参考盘点.md  接续说明.md
tasks/001-Foobox-Basic交互取证/: README.md
tasks/001-Foobox-Basic交互取证/screenshots/: README.md
tasks/002-配置隔离测试依赖/: README.md
tasks/003-建立可安装的x64组件工程/: README.md
tasks/004-实现原生主界面外壳与播放控制/: README.md
tasks/005-实现FooCrate设置与配置迁移/: README.md
tasks/005-实现Refrain设置与配置迁移/: README.md
tasks/006-实现封面基本信息与五星评分/: README.md
tasks/007-集成ESLyric与歌曲信息切换/: README.md
tasks/008-实现播放列表浏览与播放/: README.md
tasks/009-实现播放列表分组封面与列配置/: README.md
tasks/010-实现播放列表队列拖放与评分交互/: README.md
tasks/011-实现专辑封面浏览器与专辑曲目列表/: README.md
tasks/012-实现播放列表管理侧栏/: README.md
tasks/013-实现搜索筛选与Album-List入口/: README.md
tasks/014-还原顶部摘要与底部功能按钮/: README.md
tasks/015-实现Foobox-Basic默认视觉/: README.md
tasks/016-实现深浅主题与强调色系统/: README.md
tasks/017-重构FooCrate设置菜单与配置界面/: README.md
tasks/017-重构Refrain设置菜单与配置界面/: README.md
tasks/018-完善DPI无障碍与键盘操作/: README.md
tasks/019-完成稳定性性能与生命周期验证/: README.md
tasks/020-建立FooCrate临时图标系统/: README.md
tasks/020-建立Refrain临时图标系统/: README.md
tasks/020-替换Refrain正式图标资源/: README.md
tasks/021-实现播放定位与Playlist-View恢复/: README.md
tasks/022-建立ESLyric推荐默认设置/: README.md
tasks/023-打包FooCrate组件与升级迁移/: README.md
tasks/023-打包Refrain组件与升级迁移/: README.md
tasks/025-实现原生Mini-Player/: README.md
tasks/026-实现独立CoverFlow窗口/: README.md
tasks/_模板/: README.md
tests/: album_browser_model_tests.cpp  artwork_cache_tests.cpp  component_identity_tests.cpp  now_playing_state_tests.cpp  playback_layout_tests.cpp  playback_location_model_tests.cpp  playback_order_icon_tests.cpp  playback_state_tests.cpp  playlist_browser_model_tests.cpp  playlist_grouping_model_tests.cpp  playlist_interaction_model_tests.cpp  playlist_view_model_tests.cpp  settings_model_tests.cpp  theme_model_tests.cpp  verify-package.ps1
